2009-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, spwatchdog/system.h,
	spwkspace/Makefile.am, spwkspace/init.c: Add shell of test for
	printk. These will help coverage. Simplify spwkspace.
	* spprintk/.cvsignore, spprintk/Makefile.am, spprintk/init.c,
	spprintk/spprintk.scn: New files.
	* spwkspace/system.h: Removed.

2009-05-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: New test to exercise rtems_workspace_XXX
	methods.
	* spwkspace/.cvsignore, spwkspace/Makefile.am, spwkspace/init.c,
	spwkspace/spwkspace.scn, spwkspace/system.h: New files.

2009-05-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/system.h, sp04/task1.c, sp04/tswitch.c, sp07/init.c,
	sp12/init.c, sp13/putbuff.c, sp13/system.h, sp13/task1.c,
	sp15/init.c, sp16/system.h, sp19/fptask.c, sp25/system.h,
	sp26/task1.c, sp27/init.c, sp28/init.c, sp29/init.c, sp31/task1.c,
	sp33/init.c, sp34/changepri.c, sp35/priinv.c, sp37/init.c,
	sp38/init.c, sp39/init.c, sp41/init.c, sp42/init.c, sp43/init.c,
	sp44/init.c, sp45/init.c, sp46/init.c, sp47/init.c, sp48/init.c,
	spfatal03/testcase.h, spfatal05/testcase.h, spfatal06/testcase.h,
	spfatal_support/system.h, spobjgetnext/init.c, spsize/getint.c,
	spsize/size.c: Fix warnings.

2009-05-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add initial test of _Objects_Get_next.
	* spobjgetnext/.cvsignore, spobjgetnext/Makefile.am,
	spobjgetnext/init.c, spobjgetnext/spobjgetnext.scn,
	spobjgetnext/system.h: New files.

2009-05-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp25/init.c, sp25/system.h, sp25/task1.c: Reduce size of array from
	64k to 20k. No impact on test behavior.

2009-05-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen12.c, sp25/task1.c: Remove warnigns for wrong types.

2009-04-20	Santosh G Vattam <vattam.santosh@gmail.com>

	* sp37/init.c, sp37/sp37.scn: Add test case for
	rtems_interrupt_level_attribute body.
